--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang='en')
     head
         meta(charset='utf8')
-        title hola
+        title Mapa Instalaciones
     
         link(rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
@@ -13,16 +13,18 @@ html(lang='en')
    crossorigin="")
 
         style.
-         #mymap{width:900px;height:500px}
+         #mymap{width:1000px;height:600px}
 
     body
         #mymap
         select(id='supervisor_select' onchange="cambia()" )
-            each opcion, i in opciones
-                option(value=opcion) Valor #{i}
+            each opcion, i in distinctCenco1
+                option(value=opcion)  #{opcion}
+               // option(value=opcion) Valor #{i}
+                
 
-        h1 HOLA #{variable}
-        p #{geoJSON}
+       // h1 HOLA #{variable}
+
     script(src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.3.1/leaflet-omnivore.min.js')
 
     script.
@@ -105,7 +107,7 @@ html(lang='en')
                 return L.circleMarker(latlng, geojsonMarkerOptions);
                 },
                 filter:function(feature,layer){
-                return feature.properties.Group==valor;
+                return feature.properties.cenco1_desc==valor;
                 }
                 }).addTo(mymap);
 
