--- a/views/index.jade
+++ b/views/index.jade
@@ -11,19 +11,46 @@ html(lang='en')
         script(src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
    integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
    crossorigin="")
+        //script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous")
+        
+        link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
 
+        script(src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous")
+
+        script(src="/js/bootstrap-3.3.2.min.js")
+
+
+        
+        script(type="text/javascript" src='/js/bootstrap-multiselect.js')
+        link(rel="stylesheet" href="/css/bootstrap-multiselect.css")
+
+        
+        link(href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css")
+
+
+  
         style.
-         #mymap{width:1400px;height:700px}
+         #mymap{width:1800px;height:900px}
 
     body
         #mymap
-        select(id='cenco1_select' onchange="cambia('cenco1')" )
+
+        select(id="example-filter-placeholder" multiple="multiple")
+            option(value="") Selecciona un cliente...
+            option(value="all") TODOS
+            each opcion, i in distinctCenco1
+                option(value=opcion)  #{opcion}        
+
+        select(id='cenco1_select' onchange="cambia('cenco1')"  )
+            option(value="") Selecciona un cliente...
             option(value="all") TODOS
             each opcion, i in distinctCenco1
                 option(value=opcion)  #{opcion}
                // option(value=opcion) Valor #{i}
        
-        select(id='supervisor_select' onchange="cambia('supervisor')" )
+        select(id='supervisor_select' onchange="cambia('supervisor')" value="Selecciona un supervisor...")
+            option(value="") Selecciona un supervisor...
             option(value="all") TODOS
             each opcion, i in distinctSupervisores
                 option(value=opcion)  #{opcion}
@@ -34,7 +61,9 @@ html(lang='en')
 
     script(src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.3.1/leaflet-omnivore.min.js')
 
+
     script.
+
             console.log("#{variable}")
             var mymap = L.map('mymap').setView([51.505, -0.09], 1);
              L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
@@ -47,6 +76,105 @@ html(lang='en')
 
             
             var valor;
+
+            $(document).ready(function() {
+            $('#example-filter-placeholder').multiselect({
+
+            onChange: function(option, checked, select) {
+                console.log($('#example-filter-placeholder option:selected').val())
+                console.log($('#example-filter-placeholder option:selected').map(function(a, item){return item.value;}));
+                //cambia('cenco1')
+            },filterPlaceholder: 'Busqueda...'
+            ,enableFiltering: true,
+            enableCaseInsensitiveFiltering: true,
+            maxHeight: 400
+            }
+            );
+            });
+
+            function cambia2(tipo){
+
+                var cantDotVigenteTotal=0;
+                var cantDotVigenteParcial=0;
+                var cantPlantas=0;
+
+
+
+                /*var sum = [1, 2, 3].reduce((a, b) => a + b, 0);
+                console.log(sum); // 6
+
+                var arr = [{x:1},{x:2},{x:4}];
+
+                arr.reduce(function (a, b) {
+                return {x: a.x + b.x};
+                });*/
+                
+                var dataResult=JSON.parse('!{dataResult}');
+                //cantDotVigenteTotal= dataResult.reduce((a,b)=>{
+                        
+                         //a trae el valor acumulado y b trae el objeto actual
+                //    return {cotiza_dot_vigente_erp: a.cotiza_dot_vigente_erp+b.cotiza_dot_vigente_erp};
+                //});
+
+                //funcionando trae suma de un objeto
+                //var sum= dataResult.reduce((a,b)=>{
+                //    return {cotiza_dot_vigente_erp: a.cotiza_dot_vigente_erp+b.cotiza_dot_vigente_erp}
+                //});
+                //console.log(sum);
+                //console.log(dataResult);
+                var valor;
+                if (tipo=='supervisor'){
+                     valor = document.getElementById("supervisor_select").value;
+                     document.getElementById("cenco1_select").value="all"
+
+                    //si es distinto all se obtiene la cantidad de personal en base al filtro, pero si es all se debe sumar todo                  
+                     if(valor!='all'){
+                        cantDotVigenteTotal= dataResult.reduce((a,b)=>{
+                        
+                         //a trae el valor acumulado y b trae el objeto actual
+                        if( b.administrativo_nombre && b.administrativo_nombre==valor )
+                            return {cotiza_dot_vigente_erp: a.cotiza_dot_vigente_erp+b.cotiza_dot_vigente_erp};
+                        else 
+                            return{cotiza_dot_vigente_erp: a.cotiza_dot_vigente_erp};
+                        });
+
+                     }else{
+                    //funcionando trae suma de un objeto
+                        cantDotVigenteTotal= dataResult.reduce((a,b)=>{
+                        return {cotiza_dot_vigente_erp: a.cotiza_dot_vigente_erp+b.cotiza_dot_vigente_erp}
+                        });
+                     }
+
+
+                    
+                    
+                 }
+                if(tipo=='cenco1'){
+                     valor = document.getElementById("cenco1_select").value;
+                      document.getElementById("supervisor_select").value="all"
+                                          //si es distinto all se obtiene la cantidad de personal en base al filtro, pero si es all se debe sumar todo                  
+                     if(valor!='all'){
+                        cantDotVigenteTotal= dataResult.reduce((a,b)=>{
+                        
+                         //a trae el valor acumulado y b trae el objeto actual
+                        if( b.cenco1_desc && b.cenco1_desc==valor )
+                            return {cotiza_dot_vigente_erp: a.cotiza_dot_vigente_erp+b.cotiza_dot_vigente_erp};
+                        else 
+                            return{cotiza_dot_vigente_erp: a.cotiza_dot_vigente_erp};
+                        });
+
+                     }else{
+                    //funcionando trae suma de un objeto
+                        cantDotVigenteTotal= dataResult.reduce((a,b)=>{
+                        return {cotiza_dot_vigente_erp: a.cotiza_dot_vigente_erp+b.cotiza_dot_vigente_erp}
+                        });
+                     }
+
+                      
+                }
+            }
+
+
              
             function cambia(tipo){
 
@@ -195,6 +323,9 @@ html(lang='en')
                 //para no obtener 0/0 y nos de error
                 if  (featureDotacion!=0&&cantDotVigenteTotal.cotiza_dot_vigente_erp!=0)
                     valorRadio=featureDotacion/cantDotVigenteTotal.cotiza_dot_vigente_erp
+                //para evitar que se escalen demasiado los circulos //no es posible ya que se deben considerar la cantidad de plantas no de personas
+                if(cantDotVigenteTotal.cotiza_dot_vigente_erp==1)
+                    valorRadio=0;              
 
                 console.log(featureDotacion)
                 console.log(cantDotVigenteTotal.cotiza_dot_vigente_erp)
@@ -223,7 +354,18 @@ html(lang='en')
                 }
                 },onEachFeature:function(feature,layer){
                 if (feature.properties && feature.properties.name) {
-                layer.bindPopup(feature.properties.name).openPopup();
+                    let dot_vendida=0;
+                    let dot_asignada=0;
+                    let dot_vigente=0;
+                    if(feature.properties.dotacion_vendida)
+                        dot_vendida=feature.properties.dotacion_vendida
+                    if(feature.properties.dotacion_asignada)
+                        dot_asignada=feature.properties.dotacion_asignada
+                    if(feature.properties.dotacion_vigente)
+                        dot_vigente=feature.properties.dotacion_vigente
+
+                    var label=`<p style='font-weight: bold;'>`+feature.properties.cenco2_codi+" "+feature.properties.name+`</p> <p> Dotación vendida: `+dot_vendida+`<br>  Dotación asignada: `+dot_asignada+`<br>  Dotación vigente: `+dot_vigente+`</p>`
+                layer.bindPopup(label).openPopup();
                 }   
                 }
                 }).addTo(mymap);
