--- a/views/index.jade
+++ b/views/index.jade
@@ -20,6 +20,9 @@ html(lang='en')
 
         script(src="/js/bootstrap-3.3.2.min.js")
 
+        script( src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js')
+        link(rel="stylesheet" href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' )
+
 
         
         script(type="text/javascript" src='/js/bootstrap-multiselect.js')
@@ -34,7 +37,6 @@ html(lang='en')
          #mymap{width:1600px;height:800px}
 
     body
-        #mymap
         |Cliente: 
         select(id="select_filter_cenco1" multiple="multiple")
             option(value="all") TODOS
@@ -47,38 +49,9 @@ html(lang='en')
             each opcion, i in distinctSupervisores
                 option(value=opcion)  #{opcion}    
         
-        
-        
-        
-        div
-            p
-            p
-            p
-            p(align="center") Resumen Supervisor
-    
-        
-        div(align="center")
+        #mymap
 
-
-            table
-                thead
-                    tr
-                       
-                        th NOMBRE
-                        th DOT_VENDIDA
-                        th DOT_ASIGNADA
-                        th DOT_REAL
-                        th COLOR
-                tbody
-                    each post in resultSupervisor
-                        tr
-                           
-                            
-                            td= post.ADMINISTRATIVO_NOMBRE
-                            td= post.DOT_VENDIDA
-                            td= post.DOT_ASIGNADA
-                            td= post.DOT_REAL
-                            td(style="background-color:"+post.COLOR)
+        
         
        
         
@@ -112,7 +85,9 @@ html(lang='en')
     script.
             "use strict";
             console.log("#{variable}")
-            var mymap = L.map('mymap').setView([51.505, -0.09], 1);
+            var mymap = L.map('mymap'
+            , {fullscreenControl: true}
+            ).setView([51.505, -0.09], 1);
              L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
              attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
              maxZoom: 18,
@@ -382,7 +357,7 @@ html(lang='en')
                     if(feature.properties.dotacion_vigente)
                         dot_vigente=feature.properties.dotacion_vigente
 
-                    var label=`<p style='font-weight: bold;'>`+feature.properties.cenco2_codi+" "+feature.properties.name+`</p> <p> Dotación vendida: `+dot_vendida+`<br>  Dotación asignada: `+dot_asignada+`<br>  Dotación vigente: `+dot_vigente+`<br> Supervisor: `   +feature.properties.administrativo_nombre+`</p>`
+                    var label=`<p style='font-weight: bold;'>`+feature.properties.cenco2_codi+" "+feature.properties.name+`</p> Supervisor: `   +feature.properties.administrativo_nombre+`</p>`
                 layer.bindPopup(label).openPopup();
                 }   
                 }
