--- a/views/index.jade
+++ b/views/index.jade
@@ -18,6 +18,9 @@ html(lang='en')
         script(src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous")
 
+        script( src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js')
+        link(rel="stylesheet" href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' )
+
         script(src="/js/bootstrap-3.3.2.min.js")
 
 
@@ -112,7 +115,9 @@ html(lang='en')
     script.
             "use strict";
             console.log("#{variable}")
-            var mymap = L.map('mymap').setView([51.505, -0.09], 1);
+            var mymap = L.map('mymap'
+            ,{fullscreenControl: true}
+            ).setView([51.505, -0.09], 1);
              L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
              attribution: '© <a href="https://www.mapbox.com/about/maps/">Mapbox</a> © <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> <strong><a href="https://www.mapbox.com/map-feedback/" target="_blank">Improve this map</a></strong>',
              maxZoom: 18,
